--- a/rebar.config
+++ b/rebar.config
@@ -6,7 +6,11 @@
 
 {port_env, [
     {"(linux|solaris|freebsd|netbsd|openbsd|dragonfly|darwin|gnu)",
-        "LDFLAGS", "$LDFLAGS -ljq"}
+        "LDFLAGS", "$LDFLAGS -ljq"},
+    {"darwin",
+        "CFLAGS", "$CFLAGS -I /opt/homebrew/include"},
+    {"darwin",
+        "LDFLAGS", "$LDFLAGS -L /opt/homebrew/lib"}
 ]}.
 
 {pre_hooks, [{"", compile, "escript enc compile"}]}.
